--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ description: calinbule Nova Card profile
 baseurl: /
 url: https://calinbule.novacard.ro
 avatar: avatar.png
-contact-first_name: Calin-Gabriel
+contact-first_name: Calin-
 contact-last_name: Bule
 contact-title: Inginer Software
 contact-company: Nova Card
 contact-email: calin@novacard.me
 contact-phone: +40757846420
 contact-website: https://calinbule.novacard.ro
-contact-facebook_url: 
+contact-facebook_url: https://facebook.com/calin.bule
 contact-linkedin_url: https://linkedin.com/in/calinbule
 contact-instagram_url: 
 contact-pinterest_url: 
