updated: [config, vcard]

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: calinbule Nova Card profile
 baseurl: /
 url: https://calinbule.novacard.ro
 avatar: avatar.png
-contact-first_name: Calin-
+contact-first_name: Calin
 contact-last_name: Bule
 contact-title: Inginer Software
 contact-company: Nova Card
