--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ contact-first_name: Calin
 contact-last_name: Bule
 contact-title: Inginer Software
 contact-company: Nova Card
-contact-email: calin@novacard.me
+contact-email: calin.bule@gmail.com
 contact-phone: +40757846420
 contact-website: https://calinbule.novacard.ro
 contact-facebook_url: https://facebook.com/calin.bule
