--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ contact-first_name: Calin
 contact-last_name: Bule
 contact-title: Inginer Software
 contact-company: Nova Card
-contact-email: calin.bule@gmail.com
+contact-email: calin@novacard.ro
 contact-phone: +40757846420
 contact-website: https://calinbule.novacard.ro
-contact-facebook_url: https://facebook.com/calin.bule
+contact-facebook_url: 
 contact-linkedin_url: https://linkedin.com/in/calinbule
 contact-instagram_url: 
 contact-pinterest_url: 
