updated: [config, vcard]

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ contact-company: Nova Card
 contact-email: calin@novacard.ro
 contact-phone: +40757846420
 contact-website: https://calinbule.novacard.ro
-contact-facebook_url: 
+contact-facebook_url: https://facebook.com/calin.bule
 contact-linkedin_url: https://linkedin.com/in/calinbule
 contact-instagram_url: 
 contact-pinterest_url: 
