updated: [config, vcard]

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ contact-phone: +40757846420
 contact-website: https://calinbule.novacard.ro
 contact-facebook_url: https://facebook.com/calin.bule
 contact-linkedin_url: https://linkedin.com/in/calinbule
-contact-instagram_url: 
-contact-pinterest_url: 
+contact-instagram_url: https://facebook.com/calin.bule
+contact-pinterest_url: https://facebook.com/calin.bule
 contact-twitter_url: 
 contact-youtube_url: 
 contact-snapchat_url: 
