--- a/_config.yml
+++ b/_config.yml
@@ -5,15 +5,15 @@ url: https://calinbule.novacard.ro
 avatar: avatar.png
 contact-first_name: Calin
 contact-last_name: Bule
-contact-title: Inginer Software
+contact-title: Inginer Software-
 contact-company: Nova Card
-contact-email: calin@novacard.ro
+contact-email: calin@novacard.me
 contact-phone: +40757846420
-contact-website: https://calinbule.novacard.ro
-contact-facebook_url: https://facebook.com/calin.bule
+contact-website: https://novacard.ro
+contact-facebook_url: 
 contact-linkedin_url: https://linkedin.com/in/calinbule
-contact-instagram_url: https://facebook.com/calin.bule
-contact-pinterest_url: https://facebook.com/calin.bule
+contact-instagram_url: 
+contact-pinterest_url: 
 contact-twitter_url: 
 contact-youtube_url: 
 contact-snapchat_url: 
