--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ page_title: Calin Bule - Nova Card
 description: calinbule Nova Card profile
 baseurl: /
 url: https://calinbule.novacard.ro
-avatar: avatar.png
+avatar: avatar.jpg
 contact-first_name: Calin
 contact-last_name: Bule
 contact-title: Inginer Software-
